Bug #1830819: Edit dashboard button too low when not using an h1 heading
behatnotneeded

(cherry picked from commit 66bb485993af13f9016491e9f79e336d52b7dba4)

--- a/htdocs/theme/raw/sass/components/_btn.scss
+++ b/htdocs/theme/raw/sass/components/_btn.scss
@@ -143,6 +143,12 @@ h1 + div > .btn-top-left,
 }
 
 h1 ~ div > .btn-group-top,
+h2 ~ div > .btn-group-top,
+h3 ~ div > .btn-group-top,
+h4 ~ div > .btn-group-top,
+h5 ~ div > .btn-group-top,
+h6 ~ div > .btn-group-top,
+p ~ div > .btn-group-top,
 .page-header ~ div.btn-group-top,
 .page-header + .btn-action-list .btn-group-top,
 .nav-tabs +  div.btn-group-top {
